Center alignment and fix opacity
Fix nav being opacity when scrolling over portfolio images by increasing z-index on it
Centers more portfolion images when tablet or less
tidied padding on webpage

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,6 +10,7 @@ html, body {
 /************ NAVIGATION ************/
 ul{
 	list-style: none;
+	margin-bottom: 0px;
 }
 
 li {
@@ -34,6 +35,7 @@ ul a:hover {
 	position: sticky;
 	top: 0;
 	right: 0;
+	z-index: 1;
 }
 
 .nav-bg {
@@ -42,7 +44,7 @@ ul a:hover {
 }
 
 .nav-bottom{
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 }
 
 
@@ -152,6 +154,11 @@ h1, h2, h3, h4, h5, h6, p{
 	border-style: outset;
 }
 
+.boxshadow-thin-bottomborder{
+	box-shadow: 0 0 3px 0 grey;
+	border-style: outset;
+}
+
 /* rounding out the "text boxes" */
 .rounded-textbox {
 	border-radius: 25px;
@@ -243,7 +250,7 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 
-/* For mobile phones: */
+
 body {
 	width: 100%;
 }
@@ -253,9 +260,38 @@ h3, h5 {
 	text-align: center;
 }
 
+/* For mobile phones: */
+ @media only screen and (max-width: 767px)
+ {
+	/*Center nav menu*/
+	li {
+	display: inline;
+	margin: 0px;
+	}
+	
+	ul{
+		text-align: center;
+		padding: 0px;
+	}
+	
+	a {
+		text-align: center;
+	}
+	
+	/*Make portfolio images center*/
+	.two-column{
+		min-width: 100%;
+	}
+ }
 
+
+
+
+
+
+/* Everything after 768px*/
  @media only screen and (min-width: 768px) {
-	  /* For desktop: */
+	  /* For Desktop: */
 
 	/*** width of portfolio space ***/
 	#portfolio {
@@ -275,6 +311,7 @@ h3, h5 {
 		display: block;
 	}
 
+	
 
 	/****************  TWO COLUMN after width 768px ->  *****************/
 
